backend/service-gateway/gateway-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-api-dep
  labels:
    app: gateway-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-api
  template:
    metadata:
      labels:
        app: gateway-api
    spec:
      containers:
      - name: gateway-api
        image: aron918/gateway-service-tele-insight-capstone-project:b276971be48e12f4e59b40db0600615d231f4244
        ports:
        - containerPort: 8080
