backend/service-gateway/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-api-svc
spec:
  selector:
    app: gateway-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
