backend/service-gateway/gateway-ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: gateway-ingress
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: tele-insight-api-dev.a.gebeyalearning.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: gateway-api-svc
#             port:
#               number: 8080



apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: tele-insight-api-dev.a.gebeyalearning.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway-api-svc
            port:
              number: 8080
  tls: # < placing a host in the TLS config will determine what ends up in the cert's subjectAltNames
  - hosts:
    - tele-insight-api-dev.a.gebeyalearning.com
    secretName: cert-certeficate-tls # < cert-manager will store the created certificate in this secret.
